<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.settings.SettingsActivity">

    <ImageView
        android:id="@+id/back_btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back_button_description"
        android:background="@drawable/btn_bg_white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ic_filter_state"
        android:padding="3dp"
        android:src="@drawable/ic_back_24" />

    <TextView
        android:id="@+id/settings_tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_btn_settings"
        android:layout_alignStart="@id/back_btn_settings"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_semi_bold"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/dark_mode_layout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_tv_settings"
        android:layout_alignStart="@id/settings_tv_settings"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/dark_mode_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_bg_green"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ic_filter_state"
            android:padding="3dp"
            android:src="@drawable/ic_dark_mode_24dp"
            android:contentDescription="@string/dark_mode_icon_description" />

        <TextView
            android:id="@+id/dark_mode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/dark_mode_iv"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/dark_mode_iv"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/help_txt_dark_mode_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dark_mode_tv"
            android:layout_alignStart="@id/dark_mode_tv"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/help_text_dark_mode_settings"
            android:textColor="@color/gray" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dark_mode_switch_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dark_mode_layout_settings"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="?android:attr/listDivider" />


</RelativeLayout>